fix(notification): fix auth filter